# llp_final_final

./: CMakeLists.txt  CMakePresets.json  client.c  nt_structs.thrift  request_processor.c  request_processor.h  serializer.c  serializer.h  server.c
gen-c_glib/: nt_structs_types.c  nt_structs_types.h  send_statement_service.c  send_statement_service.h
lab1/: CMakeLists.txt  Makefile  database.c  database.h  lab1_llp.c  page.h  queries.c  queries.h  table.c  table.h
lab2/: data.c  data.h  lexerLINQ.l  linq.c  linq.h  main.c  makefile  parserLINQ.y  readme.md  write.c  write.h
